GCP 5747 - Double Scroll Fix (CSS update)

--- a/src/main/webapp/VAADIN/themes/gcp-default/styles.css
+++ b/src/main/webapp/VAADIN/themes/gcp-default/styles.css
@@ -616,3 +616,7 @@ s
 .v-table-cell-content-locationName {
 	font-weight: bold;
 }
+
+.gcp-dashboard-main > div {
+	overflow: auto !important;
+}
